2011-09-23  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* PointsToolbox/pts_mesh.m (v0.2.0):

	- Instead of using DelaunayTri, that suffers from a memory leak,
	use delaunay. The function is now much faster too. I have been
	able to process a segmentation from a 574x532x1024 image,
	11,824,529 voxels, in 14 min. Thanks to Kwok Chong from Mathworks
	support, for suggesting how to avoid the memory leak.

2011-09-20  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* FileFormatToolbox/scinrrd_tiff2nrrd.m (v0.2.1):

	- Fix bug. For 3D volumes, stack is an array of structs. We have
	to assume that all frames in stack have the same resolution and
	offset (only values from frame 1 are read).

2011-09-19  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* FileFormatToolbox/scinrrd_tiff2nrrd.m (v0.2.0):

	- Add functionality to read stack obtained from LSM files (the
	struct is different, it has a field "lsm" instead of "info").

2011-09-18  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ThirdPartyToolbox/TiffreadToolbox/image_background.m:
	* ThirdPartyToolbox/TiffreadToolbox/image_histogram.m:
	* ThirdPartyToolbox/TiffreadToolbox/show_image.m:
	* ThirdPartyToolbox/TiffreadToolbox/show_stack.m:
	* ThirdPartyToolbox/TiffreadToolbox/tiffread.m:

	- Minor edits to the helper headers so that we get a summary in
	README when running update_README.sh.

	* update_README.sh (v0.1.2):

	- Read also toolbox directories within toolbox directory.

	- Remove "./" at the beginning of toolbox name, but don't remove
	any other "/" symbols.

	* Add ThirdPartyToolbox/TiffreadToolbox (v2.7) directory, with files

	image_background.m
	image_histogram.m
	show_image.m
	show_stack.m
	tiffread.m

	Downloaded from

	http://www.cytosim.org/other/

	Licence GPL v3.

	* FileFormatToolbox/scinrrd_im2nrrd.m (v0.1.0):

	- Correct version number.

	- Add properties svn:eol-style native, svn:keywords Rev, Date.

	* Add FileFormatToolbox/scinrrd_tiff2nrrd.m (v0.1.0):

	- Create SCI NRRD struct from TIFF stack.
